ui: fix: action button alignment and button active

--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,8 @@
   display: flex;
   text-align: left;
   gap: 0.5rem;
+  display: table-cell;
+  vertical-align: middle;
 }
 
 .BL_btn-block {
@@ -143,6 +145,9 @@
 
 .BL_button:hover {
   background-color: white;
+}
+.BL_button:active {
+  background-color: #79d8b8;
 }
 
 .BL_add-new-task {
